[package]
name = "doremi"
version = "0.1.0"
authors = ["Maxime Ripard <maxime@cerno.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cvt = "^0.1"
libc = "^0.2"
mmap = "^0.1"
num_enum = "^0.4"
vmm-sys-util = "^0.5"
